selection highlight color changed in 0.5+ to no longer use system selection color. b=240320 r=josh sr=roc