widget/src/mac/nsLookAndFeel.cpp
@@ -42,6 +42,11 @@
 #include <ControlDefinitions.h>
 #include <MacWindows.h>
 
+#if MAC_OS_X_VERSION_MAX_ALLOWED < MAC_OS_X_VERSION_10_3
+// This theme brush is available in 10.2 and later, but was not
+// formally documented in the SDK until 10.3.
+#define kThemeBrushAlternatePrimaryHighlightColor -5
+#endif
  
 //-------------------------------------------------------------------------
 //
@@ -353,6 +358,17 @@ nsresult nsLookAndFeel::NativeGetColor(const nsColorID aID, nscolor &aColor)
 	    break;
     case eColor__moz_buttondefault:
         res = GetMacBrushColor(kThemeBrushButtonActiveDarkShadow, aColor, NS_RGB(0x77,0x77,0x77));
+        break;
+    case eColor__moz_mac_alternateprimaryhighlight:
+        // For proper styling of lists when active, on 10.2+
+        // On older OSs may have to fall back to primary highlight color
+        nscolor fallbackColor;
+        GetMacBrushColor(kThemeBrushPrimaryHighlightColor, fallbackColor, NS_RGB(0x00,0x00,0x00));
+        res = GetMacBrushColor(kThemeBrushAlternatePrimaryHighlightColor, aColor, fallbackColor);
+        break;
+    case eColor__moz_mac_secondaryhighlight:
+    	// For inactive list selection
+        res = GetMacBrushColor(kThemeBrushSecondaryHighlightColor, aColor, NS_RGB(0x00,0x00,0x00));
         break;
     default:
         NS_WARNING("Someone asked nsILookAndFeel for a color I don't know about");
